# IluminacaoM4

./: CMakeLists.txt
assets/: Suzanne.mtl
src/: Objeto3D.cpp
